[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/Backgrounds/BG1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/3Hover.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/2Normal.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/3Normal.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/1Normal.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/2Hover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/1Hover.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Dynamic Fonts/Header.tres" type="DynamicFont" id=8]
[ext_resource path="res://Object Scenes/InOverlay.tscn" type="PackedScene" id=9]
[ext_resource path="res://Fonts/ProductSans-Bold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/5Normal.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/6Hover.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/4Normal.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/5Hover.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/4Hover.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/6Normal.png" type="Texture" id=16]
[ext_resource path="res://Object Scenes/BackButton.tscn" type="PackedScene" id=17]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/NextNormal.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/PreviousHover.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/NextHover.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Buttons/Lesson Menu/PreviousNormal.png" type="Texture" id=21]
[ext_resource path="res://Display Scenes/LessonMenu.gd" type="Script" id=22]
[ext_resource path="res://LessonMenuButtons.tres" type="ButtonGroup" id=23]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 2
outline_color = Color( 0.862745, 0.576471, 0.239216, 1 )
font_data = ExtResource( 10 )

[node name="LessonMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 22 )
lessonButtons = ExtResource( 23 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LessonButtons" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LessonButtons"]
margin_top = 34.0
margin_right = 1280.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 8 )
text = "Lesson Menu"
align = 1
valign = 1

[node name="OnetoThree" type="HBoxContainer" parent="LessonButtons"]
visible = false
margin_top = 104.0
margin_right = 1280.0
margin_bottom = 651.0
alignment = 1

[node name="Button1" type="VBoxContainer" parent="LessonButtons/OnetoThree"]
margin_left = 111.0
margin_right = 461.0
margin_bottom = 547.0
rect_min_size = Vector2( 350, 0 )

[node name="One" type="TextureButton" parent="LessonButtons/OnetoThree/Button1"]
margin_right = 350.0
margin_bottom = 450.0
rect_min_size = Vector2( 350, 450 )
group = ExtResource( 23 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="LessonButtons/OnetoThree/Button1"]
margin_top = 454.0
margin_right = 350.0
margin_bottom = 499.0
custom_fonts/font = SubResource( 1 )
text = "Holiday Plan"
align = 1
valign = 1

[node name="Button2" type="VBoxContainer" parent="LessonButtons/OnetoThree"]
margin_left = 465.0
margin_right = 815.0
margin_bottom = 547.0
rect_min_size = Vector2( 350, 0 )

[node name="Two" type="TextureButton" parent="LessonButtons/OnetoThree/Button2"]
margin_right = 350.0
margin_bottom = 450.0
rect_min_size = Vector2( 350, 450 )
group = ExtResource( 23 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="LessonButtons/OnetoThree/Button2"]
margin_top = 454.0
margin_right = 350.0
margin_bottom = 499.0
custom_fonts/font = SubResource( 1 )
text = "Holiday Activity"
align = 1
valign = 1

[node name="Button3" type="VBoxContainer" parent="LessonButtons/OnetoThree"]
margin_left = 819.0
margin_right = 1169.0
margin_bottom = 547.0
rect_min_size = Vector2( 350, 0 )

[node name="Three" type="TextureButton" parent="LessonButtons/OnetoThree/Button3"]
margin_right = 350.0
margin_bottom = 450.0
rect_min_size = Vector2( 350, 450 )
group = ExtResource( 23 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="LessonButtons/OnetoThree/Button3"]
margin_top = 454.0
margin_right = 350.0
margin_bottom = 547.0
custom_fonts/font = SubResource( 1 )
text = "Asking Friend's
Holiday Activity"
align = 1
valign = 1

[node name="FourtoSix" type="HBoxContainer" parent="LessonButtons"]
margin_top = 138.0
margin_right = 1280.0
margin_bottom = 685.0
alignment = 1

[node name="Button1" type="VBoxContainer" parent="LessonButtons/FourtoSix"]
margin_left = 111.0
margin_right = 461.0
margin_bottom = 547.0
rect_min_size = Vector2( 350, 0 )

[node name="Four" type="TextureButton" parent="LessonButtons/FourtoSix/Button1"]
margin_right = 350.0
margin_bottom = 450.0
rect_min_size = Vector2( 350, 450 )
group = ExtResource( 23 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 15 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="LessonButtons/FourtoSix/Button1"]
margin_top = 454.0
margin_right = 350.0
margin_bottom = 547.0
custom_fonts/font = SubResource( 1 )
text = "Asking Friend's
Holiday Experience"
align = 1
valign = 1

[node name="Button2" type="VBoxContainer" parent="LessonButtons/FourtoSix"]
margin_left = 465.0
margin_right = 815.0
margin_bottom = 547.0
rect_min_size = Vector2( 350, 0 )

[node name="Five" type="TextureButton" parent="LessonButtons/FourtoSix/Button2"]
margin_right = 350.0
margin_bottom = 450.0
rect_min_size = Vector2( 350, 450 )
group = ExtResource( 23 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 14 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="LessonButtons/FourtoSix/Button2"]
margin_top = 454.0
margin_right = 350.0
margin_bottom = 547.0
custom_fonts/font = SubResource( 1 )
text = "Reading Holiday
Story"
align = 1
valign = 1

[node name="Button3" type="VBoxContainer" parent="LessonButtons/FourtoSix"]
margin_left = 819.0
margin_right = 1169.0
margin_bottom = 547.0
rect_min_size = Vector2( 350, 0 )

[node name="Six" type="TextureButton" parent="LessonButtons/FourtoSix/Button3"]
margin_right = 350.0
margin_bottom = 450.0
rect_min_size = Vector2( 350, 450 )
group = ExtResource( 23 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="LessonButtons/FourtoSix/Button3"]
margin_top = 454.0
margin_right = 350.0
margin_bottom = 547.0
custom_fonts/font = SubResource( 1 )
text = "My Holiday
Story"
align = 1
valign = 1

[node name="Next" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -51.5
margin_right = -35.0
margin_bottom = 51.5
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 35.0
margin_top = -51.5
margin_right = 65.0
margin_bottom = 51.5
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="." instance=ExtResource( 17 )]
margin_right = 114.0
margin_bottom = 114.0
targetScene = "MainMenu"

[node name="InOverlay" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="button_down" from="LessonButtons/OnetoThree/Button1/One" to="." method="_on_One_button_down"]
[connection signal="button_down" from="LessonButtons/OnetoThree/Button2/Two" to="." method="_on_Two_button_down"]
[connection signal="button_down" from="LessonButtons/OnetoThree/Button3/Three" to="." method="_on_Three_button_down"]
[connection signal="button_down" from="LessonButtons/FourtoSix/Button1/Four" to="." method="_on_Four_button_down"]
[connection signal="button_down" from="LessonButtons/FourtoSix/Button2/Five" to="." method="_on_Five_button_down"]
[connection signal="button_down" from="LessonButtons/FourtoSix/Button3/Six" to="." method="_on_Six_button_down"]
[connection signal="button_down" from="Next" to="." method="_on_Next_button_down"]
[connection signal="button_down" from="Previous" to="." method="_on_Previous_button_down"]
